[T19.00] Redshift: managing Redshift objects

--- a/[T19.00] Redshift managing Redshift objects.md
+++ b/[T19.00] Redshift managing Redshift objects.md
@@ -2,12 +2,12 @@
 
 ## Documentation:
 
-- [AWS Certified Data Analytics Specialty 2022 - Hands On!](): Section 04 (125 - 138)
-- [Creating external schemas for Amazon Redshift Spectrum]()
-- [Choose the best distribution style]()
-- [Working with sort keys]()
-- [Choose the best sort key]()
-- [CREATE TABLE]()
+- [AWS Certified Data Analytics Specialty 2022 - Hands On!](https://www.udemy.com/course/aws-data-analytics/): Section 04 (125 - 138)
+- [Creating external schemas for Amazon Redshift Spectrum](https://docs.aws.amazon.com/redshift/latest/dg/c-spectrum-external-schemas.html)
+- [Choose the best distribution style](https://docs.aws.amazon.com/redshift/latest/dg/c_best-practices-best-dist-key.html)
+- [Working with sort keys](https://docs.aws.amazon.com/redshift/latest/dg/t_Sorting_data.html)
+- [Choose the best sort key](https://docs.aws.amazon.com/redshift/latest/dg/c_best-practices-sort-key.html)
+- [CREATE TABLE](https://docs.aws.amazon.com/redshift/latest/dg/r_CREATE_TABLE_NEW.html)
 
 ## Description:
 
