[T16.00] Glue Spark integrating data

--- a/[T16.00] Glue Spark integrating data.md
+++ b/[T16.00] Glue Spark integrating data.md
@@ -39,7 +39,7 @@ Files for pushing to CodeComet:
 
 1. Ingest config file from S3 using commons package in your repository.
 2. Set spark.conf.set("spark.sql.sources.partitionOverwriteMode", "dynamic") option.
-3. Read fact data from stage (source) and analytics (target) zones using DynamicFrame reader class and find out new data based on ingest_dt column values. You should load only new data to the target.
+3. Read fact data from stage (source) and analytics (target) zones and find out new data based on ingest_dt column values. You should load only new data to the target.
 4. Read dimensions and mapping using dynamic frame reader class.
 5. Join fact with dimensions by columns below to get SK and version columns if exist:
    1. _dimension: go_methods(columns_to_join: 'order_method_type')_
