[T14.00] Glue Spark reading data from RDS with dynamic frame

--- a/[T14.00] Glue Spark reading data from RDS with dynamic frame.md
+++ b/[T14.00] Glue Spark reading data from RDS with dynamic frame.md
@@ -8,7 +8,7 @@
 
 ## Description:
 
-Create AWS Glue Spark Job that copies go_daily_sales data from AWS RDS to Raw S3 bucket. Available hours for RDS database (Monday-Friday 9:00 -15:00 Minsk timezone).
+Create AWS Glue Spark Job that copies go_daily_sales data from AWS RDS to Raw S3 bucket. Available hours for RDS database (Monday-Friday 9:00 -15:00 Minsk timezone). Check if RDS postgres has already available, if it is stopped turn it on, running lambda ```rds_start_postgres_database```. 
 
 Files for pushing to CodeComet:
 
