[T03.02] Setup environment.md

--- a/[T03.02] Setup environment.md
+++ b/[T03.02] Setup environment.md
@@ -23,7 +23,7 @@ Default output format --> json
 3. Run docker and pull the image: `docker pull amazon/aws-glue-libs:glue_libs_3.0.0_image_01`
 4. Launch a container to start using Glue in Jupyter locally:
 ```
-docker run -it -v ~/.aws:/home/glue_user/.aws -v {path_to_your_folder}:/home/glue_user/workspace/jupyter_workspace/ -e DISABLE_SSL=true --rm -p 4040:4040 -p 18080:18080 -p 8998:8998 -p 8888:8888 --name glue_jupyter_lab amazon/aws-glue-libs:glue_libs_3.0.0_image_01 /home/glue_user/jupyter/jupyter_start.sh
+docker run -it -v ~/.aws:/home/glue_user/.aws -v /home/dpasternak/work/PyCharmProjects/aws-edu-iba-gomel-repository/:/home/glue_user/workspace/jupyter_workspace/ -v /home/dpasternak/work/PyCharmProjects/aws-edu-iba-gomel-repository/commons/:/home/glue_user/.local/lib/python3.7/site-packages/commons -e DISABLE_SSL=true --rm -p 4040:4040 -p 18080:18080 -p 8998:8998 -p 8888:8888 --name glue_jupyter_lab amazon/aws-glue-libs:glue_libs_3.0.0_image_01 /home/glue_user/jupyter/jupyter_start.sh
 ```
 {path_to_your_folder} --> It's a path with all needed dependencies to be available inside a container such as: 'commons' package, additional installed libraries, etc.
 5. Open http://127.0.0.1:8888/ in your browser to see Jupyter
