--- a/[T17.00] Glue Crawlers and Glue Data Catalog cataloging data with Glue Crawlers.md
+++ b/[T17.00] Glue Crawlers and Glue Data Catalog cataloging data with Glue Crawlers.md
@@ -3,10 +3,15 @@
 ## Documentation:
 
 - [Data Catalog and crawlers in AWS Glue](https://docs.aws.amazon.com/glue/latest/dg/catalog-and-crawler.html)
+- [AWS::Glue::Crawler](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html)
 
 ## Description:
 
 Create AWS Glue crawlers for dimensions (dim_go_methods_analytics, dim_currency_analytics, dim_time_period_analytics). All neccesary steps are below.
+
+Files for pushing to CodeComet:
+
+- CloudFormation template: `{user_id}_dim_go_methods_analytics_t17.yaml`, `{user_id}_dim_currency_analytics_t17.yaml`, `{user_id}_dim_time_period_analytics_t17.yaml`
 
 ## Amazon Development:
 
@@ -16,3 +21,8 @@ Create AWS Glue crawlers for dimensions (dim_go_methods_analytics, dim_currency_
    2. **Table Prefix = {user_id}_**
    3. **Set Tags Owner=aws-edu-iba-gomel and StudentName={user_id}**
 3. Launch your crawlers. After crawlers have been completed, check your created tables with all needed fields in Glue Data Catalog.
+4. Create AWS CloudFormation template for Crawlers with the name: `{user_id}_dim_go_methods_analytics_t17.yaml`, `{user_id}_dim_currency_analytics_t17.yaml`, `{user_id}_dim_time_period_analytics_t17.yaml`.
+5. Test CloudFormation Template:
+   1. Deploy (check that your Crawlers has been created using CloudFormation)
+   2. Delete your CloudFormation Stack
+6. Open Pull Request as described in Common Info (Task Workflow) section.
