--- a/[T13.00] Glue Spark implementing SCD Type 2, Type 1 and CDC.md
+++ b/[T13.00] Glue Spark implementing SCD Type 2, Type 1 and CDC.md
@@ -1,4 +1,4 @@
-# [T13.00] Glue Spark: implementing SCD Type 2 and CDC
+# [T13.00] Glue Spark: implementing SCD Type 2, Type 1 and CDC
 
 ## Documentation:
 
@@ -38,18 +38,19 @@ Files for pushing to CodeComet:
 
 1. Ingest config file from S3 using commons package in your repository.
 2. Read data from AWS S3 Stage and Analytics buckets.
-3. Implement SCD Type 2 (scd.py contains help methods to complete task for SlowlyChangingDimensions in analytics zone of DataLake).
-4. Add columns:
-   1. record_start_ts (timestamp)
-   2. record_end_ts(timestamp)
-   3. record_active_flag (string): ACTIVE or INACTIVE
-   4. record_upd_ts (timestamp)
-   5. record_insert_ts (timestamp)
-   6. version (int)
-5. Drop column:
-   1. change_code
-6. Add column 'audit_ts' that is equal to current timestamp.
-7. Load data to the target as parquet.
+3. Implement SCD Type 2 (scd.py contains help methods to complete task for SlowlyChangingDimensions in analytics zone of DataLake) for ```dim_currency```.
+   1. Add columns:
+      1. record_start_ts (timestamp)
+      2. record_end_ts(timestamp)
+      3. record_active_flag (string): ACTIVE or INACTIVE
+      4. record_upd_ts (timestamp)
+      5. record_insert_ts (timestamp)
+      6. version (int)
+   2. Drop column:
+      1. change_code
+4. Implement SCD Type 1 (scd.py contains help methods to complete task for SlowlyChangingDimensions in analytics zone of DataLake) for ```dim_go_methods```.
+5. Add column 'audit_ts' that is equal to current timestamp.
+6. Load data to the target as parquet.
 
 ## Amazon Development:
 
