--- a/[T15.00] Glue Spark transforming and processing data.md
+++ b/[T15.00] Glue Spark transforming and processing data.md
@@ -35,12 +35,11 @@ Files for pushing to CodeComet:
 ## Local Development:
 
 1. Ingest config file from S3 using commons package in your repository.
-2. Extract data from raw S3 bucket and stage S3 bucket using native spark.
+2. Extract data from raw S3 bucket and stage S3 bucket using DynamicFrame.
 3. Join Raw data and Stage data and get only new records by ingest_dt.
 4. Drop duplicates.
 5. Add column 'audit_ts' that is equal to current timestamp.
-6. Setting spark config (spark.sql.sources.partitionOverwriteMode=dynamic).
-7. Load Data as partitioned by 'ingest_dt' in target bucket as parquet.
+6. Load Data as partitioned by 'ingest_dt' in target bucket as parquet.
 
 ## Amazon Development:
 
