--- a/[T19.00] Redshift managing Redshift objects.md
+++ b/[T19.00] Redshift managing Redshift objects.md
@@ -7,6 +7,8 @@
 - [Choose the best distribution style](https://docs.aws.amazon.com/redshift/latest/dg/c_best-practices-best-dist-key.html)
 - [Working with sort keys](https://docs.aws.amazon.com/redshift/latest/dg/t_Sorting_data.html)
 - [Choose the best sort key](https://docs.aws.amazon.com/redshift/latest/dg/c_best-practices-sort-key.html)
+- [Deep Dive on Amazon Redshift - AWS Online Tech Talks](https://www.youtube.com/watch?v=Hur-p3kGDTA&ab_channel=AWSOnlineTechTalks)
+- [AWS re:Invent 2019: Deep dive and best practices for Amazon Redshift (ANT418)](https://www.youtube.com/watch?v=lj8oaSpCFTc&ab_channel=AWSEvents)
 - [CREATE TABLE](https://docs.aws.amazon.com/redshift/latest/dg/r_CREATE_TABLE_NEW.html)
 
 ## Description:
