--- a/[T28.00] Step Functions Orchestration implementing e2e EMR data pipeline.md
+++ b/[T28.00] Step Functions Orchestration implementing e2e EMR data pipeline.md
@@ -2,13 +2,13 @@
 
 ## Documentation:
 
-- [AWS Step Functions Overview]()
-- [What are AWS Step Functions?]()
-- [Parallel]()
-- [Actions]()
-- [Input and Output Processing in Step Functions]() (Read entire section)
-- [Data flow simulator]()
-- [AWS::StepFunctions::StateMachine]()
+- [AWS Step Functions Overview](https://www.datadoghq.com/knowledge-center/aws-step-functions/)
+- [What are AWS Step Functions?](https://www.youtube.com/watch?v=zCIpWFYDJ8s&ab_channel=BeABetterDev)
+- [Parallel](https://docs.aws.amazon.com/step-functions/latest/dg/amazon-states-language-parallel-state.html)
+- [Actions](https://docs.aws.amazon.com/emr/latest/APIReference/API_Operations.html)
+- [Input and Output Processing in Step Functions](https://docs.aws.amazon.com/step-functions/latest/dg/concepts-input-output-filtering.html) (Read entire section)
+- [Data flow simulator](https://us-east-1.console.aws.amazon.com/states/home?region=us-east-1#/simulator)
+- [AWS::StepFunctions::StateMachine](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html)
 
 ## Description:
 
