--- a/[T24.00] OBT Spark creating OBT dataset.md
+++ b/[T24.00] OBT Spark creating OBT dataset.md
@@ -8,7 +8,7 @@
 
 ## Description:
 
-Create AWS Glue Spark Job that reads fact and dimensions from AWS S3 Analytics bucket. Integrate data and load to AWS S3 Analytics bucket in parquet format to implement OBT logic.
+Create Spark Job that reads fact and dimensions from AWS S3 Analytics bucket. Integrate data and load to AWS S3 Analytics bucket in parquet format to implement OBT logic.
 
 Files for pushing to CodeComet:
 
