--- a/[T24.00] OBT Spark creating OBT dataset.md
+++ b/[T24.00] OBT Spark creating OBT dataset.md
@@ -22,6 +22,12 @@ Files for pushing to CodeComet:
 4. Write data to `[data-target][s3][key]`
 5. Replace `{user_id}` with your aws account name for target path
 
+## Environment Variables:
+
+- **UserId** = `{user_id}`
+- **ConfigBucketKey** = `configurations/{configuration_file_name}.yaml`
+- **ConfigBucketName** = `aws-data-engineering-course-{user-id}-assets`
+
 ## Local Development:
 
 1. Ingest config file from S3 using commons.
