--- a/[T27.00] EMR running code on EMR cluster.md
+++ b/[T27.00] EMR running code on EMR cluster.md
@@ -20,7 +20,7 @@ Files for pushing to CodeComet:
 1. Use advanced options to create a cluster.
 2. Use emr-6.8.0 release and choose Spark and Hadoop for Software configuration.
 3. Leave as default next options on that page and add steps.
-4. The first step will be the job for OBT from analytics folder. Cluster should be terminated if something went wrong.
+4. The first step will be the job for OBT from analytics folder (from [T24.00]). Cluster should be terminated if something went wrong.
 5. The second step will be the job for OBT from datawarehouse folder. Create as previous step.
 6. Leave only Master Node. Choose m5.xlarge instance type.
 7. Auto termination should be set for 5 minutes.
