--- a/[T26.00] OBT Redshift Spectrum loading OBT data into Redshift.md
+++ b/[T26.00] OBT Redshift Spectrum loading OBT data into Redshift.md
@@ -6,17 +6,24 @@
 
 ## Description:
 
-Create a Spark Job that loads data from Redshift Spectrum table to Redshift table. We need Spark Job in that case to launch script from EMR further in the other case we would use just Python.
+Create a Python Job that loads data from Redshift Spectrum table to Redshift table. We need Spark Job in that case to launch script from EMR further in the other case we would use just Python.
 
 Files for pushing to CodeComet:
 
 - DDL name: `OBT.sql`
+- Script name: `obt_datawarehouse.py`
 
 ## Configuration:
 
 1. Path: `configurations/obt.yaml`
 2. Use `datawarehouse` section
 3. Use `[redshift-connect]` to connect to redshift
+
+## Environment Variables:
+
+- **UserId** = `{user_id}`
+- **ConfigBucketKey** = `configurations/{configuration_file_name}.yaml`
+- **ConfigBucketName** = `aws-data-engineering-course-{user-id}-assets`
 
 ## Local Development:
 
