--- a/[T27.00] EMR running code on EMR cluster.md
+++ b/[T27.00] EMR running code on EMR cluster.md
@@ -22,17 +22,18 @@ Files for pushing to CodeComet:
 3. Leave as default next options on that page and add steps.
 4. The first step will be the job for OBT from analytics folder (from [T24.00]). Cluster should be terminated if something went wrong.
 5. The second step will be the job for OBT from datawarehouse folder. Create as previous step.
-6. Leave only Master Node. Choose m5.xlarge instance type.
+6. Leave only Master Node. Choose m5.xlarge instance type (for new console remove core properties, removing instance group).
 7. Auto termination should be set for 5 minutes.
 8. Leave as default remaining options and click next.
 9. Set cluster name: `{user_id}_obt`
 10. **Set Tags Owner=aws-edu-iba-gomel and StudentName={user_id}**
 11. Edit `dependencies/install_depencies.sh` in your repo, enter with your bucket name and upload it to your bucket dependencies folder.
 12. Add bootstrap actions.
-13. Click next and create cluster.
-14. Wait and see logs of your steps.
-15. Create AWS CloudFormation template to create EMR cluster (`obt_datawarehouse_t20.yaml`) and add steps for your OBT jobs. Your cluster parameters should be the same as in steps 1-13.
-16. Test CloudFormation Template:
+13. Use EMR_DefaultRole_V2 and EMR_EC2_DefaultRole
+14. Click next and create cluster.
+15. Wait and see logs of your steps.
+16. Create AWS CloudFormation template to create EMR cluster (`obt_datawarehouse_t20.yaml`) and add steps for your OBT jobs. Your cluster parameters should be the same as in steps 1-13.
+17. Test CloudFormation Template:
     1. Deploy (check that your EMR cluster has been created using CloudFormation)
     2. Delete your CloudFormation Stack
-17. Open Pull Request as described in Common Info (Task Workflow) section.
+18. Open Pull Request as described in Common Info (Task Workflow) section.
