--- a/[T27.00] EMR running code on EMR cluster.md
+++ b/[T27.00] EMR running code on EMR cluster.md
@@ -29,7 +29,7 @@ Files for pushing to CodeComet:
 10. **Set Tags Owner=aws-edu-iba-gomel and StudentName={user_id}**
 11. Edit `dependencies/install_depencies.sh` in your repo, enter with your bucket name and upload it to your bucket dependencies folder.
 12. Add bootstrap actions.
-13. Use EMR_DefaultRole_V2 and EMR_EC2_DefaultRole
+13. Use EMR_DefaultRole and EMR_EC2_DefaultRole
 14. Click next and create cluster.
 15. Wait and see logs of your steps.
 16. Create AWS CloudFormation template to create EMR cluster (`obt_datawarehouse_t20.yaml`) and add steps for your OBT jobs. Your cluster parameters should be the same as in steps 1-13.
