--- a/[T18.00] Glue Crawlers and Glue Data Catalog event driven crawler with SQS.md
+++ b/[T18.00] Glue Crawlers and Glue Data Catalog event driven crawler with SQS.md
@@ -11,9 +11,13 @@
 
 Create S3 event for the bucket path where you load your fact_go_daily_sales data in Analytics zone. Create SQS queue to get messages from S3 event. Create AWS Glue crawler using SQS as a data source. All neccesary steps are below.
 
+Files for pushing to CodeComet:
+
+- CloudFormation template: `{user_id}_fact_go_daily_sales_event_t18.yaml`
+
 ## Amazon Development:
 
-1. Create SQS queue with the name: `{user_id}_s3_go_daily_sales_event_queue_t13`.
+1. Create SQS queue with the name: `{user_id}_s3_go_daily_sales_event_queue_t18`.
 2. **Mandatory Steps:**
    1. **Add policy to your queue as below:**
    ```json
@@ -28,7 +32,7 @@ Create S3 event for the bucket path where you load your fact_go_daily_sales data
         "Service": "s3.amazonaws.com" 
       },
       "Action": "SQS:SendMessage",
-      "Resource": "arn:aws:sqs:us-east-1:925773467190:{user_id}_go_daily_sales_event",
+      "Resource": "arn:aws:sqs:us-east-1:925773467190:{user_id}_s3_go_daily_sales_event_queue_t18",
       "Condition": {
         "StringEquals": {
           "aws:SourceAccount": "925773467190" 
@@ -42,12 +46,17 @@ Create S3 event for the bucket path where you load your fact_go_daily_sales data
    }
    ```
    2. **Set Tags Owner=aws-edu-iba-gomel and StudentName={user_id}**
-3. Create S3 event with the name: `{user_id}_go_daily_sales_event_t13` to send messages to SQS when in your target path created new data or updated data.
-4. Create a crawler `{user_id}_fact_go_daily_sales_t13` based on SQS.
+3. Create S3 event with the name: `{user_id}_fact_go_daily_sales_event_t18` to send messages to SQS when in your target path created new data or updated data.
+4. Create a crawler `{user_id}_fact_go_daily_sales_event_t18` based on SQS.
 5. **Mandatory Steps:**
    1. **Target Database = aws_edu_analytics**
    2. **Table Prefix = {user_id}_**
    3. **Set Tags Owner=aws-edu-iba-gomel and StudentName={user_id}**
 6. Run job for fact_go_daily_sales_analytics to add something to the target folder. Launch your crawler. After crawler has been completed check your created table with all needed fields and partitions in Glue Data Catalog.
 7. Answer the question why do you need to implement cataloging the fact using S3 event + SQS + crawler aproach.
+8. Create AWS CloudFormation template for Crawlers with the name: `{user_id}_fact_go_daily_sales_event_t18.yaml`.
+9. Test CloudFormation Template:
+   1. Deploy (check that your Crawlers has been created using CloudFormation)
+   2. Delete your CloudFormation Stack
+10. Open Pull Request as described in Common Info (Task Workflow) section.
 
